bug: Make top and bottom texts readable

--- a/js-users/js-users/src/App.css
+++ b/js-users/js-users/src/App.css
@@ -15,6 +15,11 @@
     color: rgba(0, 0, 0, .5) !important;
 }
 
+header,
+.flaticon-attribution {
+    color: #fff;
+}
+
 .logo {
     width: 50px;
 }
